--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
             </div>
             <H1>BIANCA HELENA</H1>
             <h3>UI/UX <span>Designer.<span></h3>
-             <h3><span>Estudante</span> de Engenharia Computacional.</h3>
+            <h3>WEB <span>Developer.<span></h3>
+            <h3><span>Estudante</span> de Engenharia Computacional.</h3>
             <p>Seja bem-vindo ao meu Portifólio, uma página da web onde você pode conhecer meus serviços de uma forma descontraída e prática, interagindo com uma interface criada do zero para mostrar minhas habilidades em programação. </p>
         </div>
         <div class="button">
